# airbnb-clone-backend

./: pyproject.toml  readme.md
bookings/: urls.py  views.py
bookings/migrations/: 0001_initial.py
categories/: serializers.py
categories/migrations/: 0001_initial.py
config/: authentication.py  settings.py  urls.py
direct_messages/: serializers.py  urls.py  views.py
direct_messages/migrations/: 0001_initial.py
experiences/: serializers.py  views.py
experiences/migrations/: 0001_initial.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pets_allowed.py
medias/: serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py
reviews/: admin.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
rooms/: serializers.py  urls.py  views.py
rooms/migrations/: 0001_initial.py
rooms/templates/: all_rooms.html  room_detail.html
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_alter_like_tweet_alter_tweet_user.py  0003_alter_tweet_user.py
tweets/templates/: all_tweets.html
users/: admin.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
wishlists/: serializers.py  views.py
wishlists/migrations/: 0001_initial.py
